syntax = "proto3";

message Element {
  uint64 timestamp = 1;
  bytes data = 2;
  // Id to help identify correct Weld module
  string task_id = 3;
}

message WindowTrigger {}

message WindowComplete {}

message WindowMessage {
  oneof payload {
    WindowTrigger trigger = 1;
    WindowComplete complete = 2;
    Element element = 3;
  }
}

message Checkpoint {}

message Watermark {
  uint64 timestamp = 1;
}

message StreamTaskMessage {
  oneof payload {
    Element element = 1;
    Watermark watermark = 2;
    Checkpoint checkpoint = 3;
  }
}
